--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Check that you have this dependency (added in the previous step)
+  firebase_core: ^1.13.1
 
+  # Add the dependency for the FlutterFire plugin for Google Analytics
+  firebase_analytics: ^9.1.2
+
+  # Add the dependencies for any other Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  firebase_auth: ^3.3.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
