--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.car_washer">
+    package="com.lamaah.driver">
    <application
         android:label="car_washer"
         android:name="${applicationName}"
