--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^3.3.11
   firebase_analytics: ^9.1.2
   device_info: ^2.0.3
+  shared_preferences: ^2.0.13
+  http: ^0.13.4
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
