--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,12 @@ dependencies:
   shared_preferences: ^2.0.13
   http: ^0.13.4
   permission_handler: ^9.2.0
+  flutter_facebook_sdk: ^1.0.0
   flutter_facebook_auth: ^4.1.2
   google_sign_in: ^5.2.4
+  flutter_login_facebook: ^1.4.1
+
+
 
 dev_dependencies:
   flutter_test:
