--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_login_facebook: ^1.4.1
   pinput: ^1.2.0
   flutter_easyloading: ^3.0.3
+  country_picker: ^2.0.12
+  flutter_material_pickers: ^3.1.2
 
 
 dev_dependencies:
@@ -80,6 +82,13 @@ flutter:
   assets:
     - assets/services.json
     - assets/documents.json
+
+
+  fonts:
+     - family: MyFlutterApp
+       fonts:
+       - asset: assets/fonts/MyFlutterApp.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -90,6 +99,9 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
+
+
+
   # example:
   # fonts:
   #   - family: Schyler
