--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_easyloading: ^3.0.3
   country_picker: ^2.0.12
   flutter_material_pickers: ^3.1.2
+  google_maps_flutter: ^2.1.3
 
 
 dev_dependencies:
