--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher">
 
        <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value=""/>
+           android:value="AIzaSyB7k2vqa5ZEiajjohPfQr7hlJG1HL1bLDU"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
