--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,13 @@ dependencies:
   country_picker: ^2.0.12
   flutter_material_pickers: ^3.1.2
   google_maps_flutter: ^2.1.3
+  flip_card: ^0.6.0
+  readmore: ^2.1.0
+  file_picker: ^4.5.1
+  open_file: ^3.2.1
+  thumbnailer: ^2.0.1
+  flutter_datetime_picker: ^1.5.1
+
 
 
 dev_dependencies:
