--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,10 +97,11 @@ flutter:
     - assets/documents.json
 
 
+
   fonts:
-     - family: MyFlutterApp
+     - family: MyIcons
        fonts:
-       - asset: assets/fonts/MyFlutterApp.ttf
+       - asset: assets/fonts/MyIcons.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
